# GstRecognizer

./: CMakeLists.txt  readme.md
src/: gstdetectioninfo.cpp  gstdetectioninfo.h  gstrecognizer.cpp  gstrecognizer.h  irecognizer.h  recognizer.cpp  recognizer.h
